# projekt-2-MichalPigon

./: CMakeLists.txt
include/: catch_amalgamated.cpp  catch_amalgamated.hpp  frac.hpp
src/: main.cpp
